update with 56 changes

--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,11 +72,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org59d84dd">사용법</a>
+<li><a href="#org6b2e7f0">사용법</a>
 <ul>
-<li><a href="#org854508e">무제한 잠자기 방지</a></li>
-<li><a href="#org743ff26">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#orgc608fee">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org46974ce">무제한 잠자기 방지</a></li>
+<li><a href="#org9947b16">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org757f468">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -75,13 +87,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org59d84dd" class="outline-2">
-<h2 id="org59d84dd">사용법</h2>
-<div class="outline-text-2" id="text-org59d84dd">
+<div id="outline-container-org6b2e7f0" class="outline-2">
+<h2 id="org6b2e7f0">사용법</h2>
+<div class="outline-text-2" id="text-org6b2e7f0">
 </div>
-<div id="outline-container-org854508e" class="outline-3">
-<h3 id="org854508e">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org854508e">
+<div id="outline-container-org46974ce" class="outline-3">
+<h3 id="org46974ce">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org46974ce">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -92,9 +104,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org743ff26" class="outline-3">
-<h3 id="org743ff26">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org743ff26">
+<div id="outline-container-org9947b16" class="outline-3">
+<h3 id="org9947b16">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org9947b16">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -105,9 +117,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgc608fee" class="outline-3">
-<h3 id="orgc608fee">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgc608fee">
+<div id="outline-container-org757f468" class="outline-3">
+<h3 id="org757f468">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org757f468">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
