--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,12 +72,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org01b25ae">단축키</a>
+<li><a href="#org4a42682">단축키</a>
 <ul>
-<li><a href="#org5973b1c">프로젝트(Project)</a></li>
-<li><a href="#org3e3ef9a">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#orgc4d441f">타임라인(Timeline)</a></li>
-<li><a href="#org13d1ed4">플레이(Play or Preview)</a></li>
+<li><a href="#org2578472">프로젝트(Project)</a></li>
+<li><a href="#org32cfa5a">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org3805842">타임라인(Timeline)</a></li>
+<li><a href="#org243a104">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -77,13 +89,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org01b25ae" class="outline-2">
-<h2 id="org01b25ae">단축키</h2>
-<div class="outline-text-2" id="text-org01b25ae">
+<div id="outline-container-org4a42682" class="outline-2">
+<h2 id="org4a42682">단축키</h2>
+<div class="outline-text-2" id="text-org4a42682">
 </div>
-<div id="outline-container-org5973b1c" class="outline-3">
-<h3 id="org5973b1c">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org5973b1c">
+<div id="outline-container-org2578472" class="outline-3">
+<h3 id="org2578472">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org2578472">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -92,9 +104,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org3e3ef9a" class="outline-3">
-<h3 id="org3e3ef9a">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org3e3ef9a">
+<div id="outline-container-org32cfa5a" class="outline-3">
+<h3 id="org32cfa5a">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-org32cfa5a">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -109,9 +121,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc4d441f" class="outline-3">
-<h3 id="orgc4d441f">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-orgc4d441f">
+<div id="outline-container-org3805842" class="outline-3">
+<h3 id="org3805842">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org3805842">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -136,9 +148,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org13d1ed4" class="outline-3">
-<h3 id="org13d1ed4">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org13d1ed4">
+<div id="outline-container-org243a104" class="outline-3">
+<h3 id="org243a104">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-org243a104">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
