--- a/note/flake8.html
+++ b/note/flake8.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,11 +72,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org007afd9">설치</a></li>
-<li><a href="#org4a11e83">사용법</a></li>
-<li><a href="#orga0dff13">설정 파일</a></li>
-<li><a href="#orge236b26">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#orgf3857b8">외부 링크</a></li>
+<li><a href="#orgd1ff10c">설치</a></li>
+<li><a href="#orgabb8beb">사용법</a></li>
+<li><a href="#org6e4fc83">설정 파일</a></li>
+<li><a href="#org1b62a7f">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#orga8b1353">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -76,9 +88,9 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-org007afd9" class="outline-2">
-<h2 id="org007afd9">설치</h2>
-<div class="outline-text-2" id="text-org007afd9">
+<div id="outline-container-orgd1ff10c" class="outline-2">
+<h2 id="orgd1ff10c">설치</h2>
+<div class="outline-text-2" id="text-orgd1ff10c">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -88,9 +100,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-org4a11e83" class="outline-2">
-<h2 id="org4a11e83">사용법</h2>
-<div class="outline-text-2" id="text-org4a11e83">
+<div id="outline-container-orgabb8beb" class="outline-2">
+<h2 id="orgabb8beb">사용법</h2>
+<div class="outline-text-2" id="text-orgabb8beb">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -110,9 +122,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga0dff13" class="outline-2">
-<h2 id="orga0dff13">설정 파일</h2>
-<div class="outline-text-2" id="text-orga0dff13">
+<div id="outline-container-org6e4fc83" class="outline-2">
+<h2 id="org6e4fc83">설정 파일</h2>
+<div class="outline-text-2" id="text-org6e4fc83">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -144,9 +156,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-orge236b26" class="outline-2">
-<h2 id="orge236b26">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-orge236b26">
+<div id="outline-container-org1b62a7f" class="outline-2">
+<h2 id="org1b62a7f">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-org1b62a7f">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -179,9 +191,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-orgf3857b8" class="outline-2">
-<h2 id="orgf3857b8">외부 링크</h2>
-<div class="outline-text-2" id="text-orgf3857b8">
+<div id="outline-container-orga8b1353" class="outline-2">
+<h2 id="orga8b1353">외부 링크</h2>
+<div class="outline-text-2" id="text-orga8b1353">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
