--- a/note/grep.html
+++ b/note/grep.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,16 +72,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbc0bd0c">기본 사용법</a></li>
-<li><a href="#org3a222c1">대소문자 무시</a></li>
-<li><a href="#orgd58b630">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#orgf8b124c">재귀(Recursive) 검색</a></li>
-<li><a href="#orgd31fa62">검색된 파일 이름만 보기</a></li>
-<li><a href="#orgd0dcd39">단어만 검색하기</a></li>
-<li><a href="#orgb1e1661">줄 번호(Line Number) 보기</a></li>
-<li><a href="#org5664812">발견 개수 보기</a></li>
-<li><a href="#orgeba0266">검색되지 않는 것만 보기</a></li>
-<li><a href="#org619ff9e">정규표현식</a></li>
+<li><a href="#org0f03cd1">기본 사용법</a></li>
+<li><a href="#orge280006">대소문자 무시</a></li>
+<li><a href="#orgc8b7e6b">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#orgd698bd4">재귀(Recursive) 검색</a></li>
+<li><a href="#orgacfb85b">검색된 파일 이름만 보기</a></li>
+<li><a href="#orgc59bc7f">단어만 검색하기</a></li>
+<li><a href="#orged2b0a0">줄 번호(Line Number) 보기</a></li>
+<li><a href="#orga0a3898">발견 개수 보기</a></li>
+<li><a href="#org81f548b">검색되지 않는 것만 보기</a></li>
+<li><a href="#orgd2ee91a">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +89,9 @@ gtag('config', 'UA-44534026-1');
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgbc0bd0c" class="outline-2">
-<h2 id="orgbc0bd0c">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgbc0bd0c">
+<div id="outline-container-org0f03cd1" class="outline-2">
+<h2 id="org0f03cd1">기본 사용법</h2>
+<div class="outline-text-2" id="text-org0f03cd1">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -106,9 +118,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org3a222c1" class="outline-2">
-<h2 id="org3a222c1">대소문자 무시</h2>
-<div class="outline-text-2" id="text-org3a222c1">
+<div id="outline-container-orge280006" class="outline-2">
+<h2 id="orge280006">대소문자 무시</h2>
+<div class="outline-text-2" id="text-orge280006">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -118,9 +130,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-orgd58b630" class="outline-2">
-<h2 id="orgd58b630">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-orgd58b630">
+<div id="outline-container-orgc8b7e6b" class="outline-2">
+<h2 id="orgc8b7e6b">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-orgc8b7e6b">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -130,9 +142,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-orgf8b124c" class="outline-2">
-<h2 id="orgf8b124c">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-orgf8b124c">
+<div id="outline-container-orgd698bd4" class="outline-2">
+<h2 id="orgd698bd4">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-orgd698bd4">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -158,9 +170,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgd31fa62" class="outline-2">
-<h2 id="orgd31fa62">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-orgd31fa62">
+<div id="outline-container-orgacfb85b" class="outline-2">
+<h2 id="orgacfb85b">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-orgacfb85b">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -175,9 +187,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgd0dcd39" class="outline-2">
-<h2 id="orgd0dcd39">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-orgd0dcd39">
+<div id="outline-container-orgc59bc7f" class="outline-2">
+<h2 id="orgc59bc7f">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-orgc59bc7f">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -190,9 +202,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgb1e1661" class="outline-2">
-<h2 id="orgb1e1661">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-orgb1e1661">
+<div id="outline-container-orged2b0a0" class="outline-2">
+<h2 id="orged2b0a0">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-orged2b0a0">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -205,9 +217,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org5664812" class="outline-2">
-<h2 id="org5664812">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-org5664812">
+<div id="outline-container-orga0a3898" class="outline-2">
+<h2 id="orga0a3898">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-orga0a3898">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -220,9 +232,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgeba0266" class="outline-2">
-<h2 id="orgeba0266">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-orgeba0266">
+<div id="outline-container-org81f548b" class="outline-2">
+<h2 id="org81f548b">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-org81f548b">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -235,9 +247,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org619ff9e" class="outline-2">
-<h2 id="org619ff9e">정규표현식</h2>
-<div class="outline-text-2" id="text-org619ff9e">
+<div id="outline-container-orgd2ee91a" class="outline-2">
+<h2 id="orgd2ee91a">정규표현식</h2>
+<div class="outline-text-2" id="text-orgd2ee91a">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
