--- a/note/afplay.html
+++ b/note/afplay.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,7 +72,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd9ae193">사용법</a></li>
+<li><a href="#orga42e4ee">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -70,9 +82,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-orgd9ae193" class="outline-2">
-<h2 id="orgd9ae193">사용법</h2>
-<div class="outline-text-2" id="text-orgd9ae193">
+<div id="outline-container-orga42e4ee" class="outline-2">
+<h2 id="orga42e4ee">사용법</h2>
+<div class="outline-text-2" id="text-orga42e4ee">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
