--- a/note/find.html
+++ b/note/find.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,14 +72,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1b80c99">기본 사용법</a>
+<li><a href="#org96cbadc">기본 사용법</a>
 <ul>
-<li><a href="#orge177163">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orgaf5d1e0">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org2cf220c">검색 패턴</a></li>
-<li><a href="#org679d6ad">대소문자 무시하기</a></li>
-<li><a href="#org648b6ee">검색 종류 지정하기</a></li>
-<li><a href="#org86204ec">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#org9e9baab">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org5c57959">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orga59fc9c">검색 패턴</a></li>
+<li><a href="#org34c2e68">대소문자 무시하기</a></li>
+<li><a href="#orge26d955">검색 종류 지정하기</a></li>
+<li><a href="#orge31d43d">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -78,13 +90,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org1b80c99" class="outline-2">
-<h2 id="org1b80c99">기본 사용법</h2>
-<div class="outline-text-2" id="text-org1b80c99">
+<div id="outline-container-org96cbadc" class="outline-2">
+<h2 id="org96cbadc">기본 사용법</h2>
+<div class="outline-text-2" id="text-org96cbadc">
 </div>
-<div id="outline-container-orge177163" class="outline-3">
-<h3 id="orge177163">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orge177163">
+<div id="outline-container-org9e9baab" class="outline-3">
+<h3 id="org9e9baab">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org9e9baab">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -96,9 +108,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgaf5d1e0" class="outline-3">
-<h3 id="orgaf5d1e0">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-orgaf5d1e0">
+<div id="outline-container-org5c57959" class="outline-3">
+<h3 id="org5c57959">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org5c57959">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -108,9 +120,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org2cf220c" class="outline-3">
-<h3 id="org2cf220c">검색 패턴</h3>
-<div class="outline-text-3" id="text-org2cf220c">
+<div id="outline-container-orga59fc9c" class="outline-3">
+<h3 id="orga59fc9c">검색 패턴</h3>
+<div class="outline-text-3" id="text-orga59fc9c">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -123,9 +135,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org679d6ad" class="outline-3">
-<h3 id="org679d6ad">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org679d6ad">
+<div id="outline-container-org34c2e68" class="outline-3">
+<h3 id="org34c2e68">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org34c2e68">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -136,9 +148,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org648b6ee" class="outline-3">
-<h3 id="org648b6ee">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org648b6ee">
+<div id="outline-container-orge26d955" class="outline-3">
+<h3 id="orge26d955">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-orge26d955">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -156,9 +168,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org86204ec" class="outline-3">
-<h3 id="org86204ec">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org86204ec">
+<div id="outline-container-orge31d43d" class="outline-3">
+<h3 id="orge31d43d">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-orge31d43d">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
