--- a/note/flutter.html
+++ b/note/flutter.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,10 +72,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7a51656">문제 해결</a>
+<li><a href="#org50488cb">문제 해결</a>
 <ul>
-<li><a href="#org3544235">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org2172d62">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#orgbb43752">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org449a472">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -79,13 +91,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org7a51656" class="outline-2">
-<h2 id="org7a51656">문제 해결</h2>
-<div class="outline-text-2" id="text-org7a51656">
+<div id="outline-container-org50488cb" class="outline-2">
+<h2 id="org50488cb">문제 해결</h2>
+<div class="outline-text-2" id="text-org50488cb">
 </div>
-<div id="outline-container-org3544235" class="outline-3">
-<h3 id="org3544235">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org3544235">
+<div id="outline-container-orgbb43752" class="outline-3">
+<h3 id="orgbb43752">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-orgbb43752">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -118,9 +130,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org2172d62" class="outline-3">
-<h3 id="org2172d62">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org2172d62">
+<div id="outline-container-org449a472" class="outline-3">
+<h3 id="org449a472">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org449a472">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
