--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,22 +72,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org90793f9">기본 사용법</a>
+<li><a href="#org9debb23">기본 사용법</a>
 <ul>
-<li><a href="#orge444b8d">패키지 검색</a></li>
-<li><a href="#org2c394fa">패키지 정보</a></li>
-<li><a href="#org0e19cf4">패키지 설치</a></li>
-<li><a href="#orgfa7fbc3">만료된 버전 확인</a></li>
-<li><a href="#org99cfb04">패키지 업그레이드</a></li>
-<li><a href="#org65e9fd6">구 버전 삭제하기</a></li>
-<li><a href="#org5d5ef95">패키지 삭제(uninstall)</a></li>
-<li><a href="#org6350b21">의사 양반(?)</a></li>
+<li><a href="#orga1648af">패키지 검색</a></li>
+<li><a href="#orgf1d9442">패키지 정보</a></li>
+<li><a href="#orga6e7a47">패키지 설치</a></li>
+<li><a href="#orgc1bb009">만료된 버전 확인</a></li>
+<li><a href="#orgf406dfc">패키지 업그레이드</a></li>
+<li><a href="#org0a15e05">구 버전 삭제하기</a></li>
+<li><a href="#org1cc2529">패키지 삭제(uninstall)</a></li>
+<li><a href="#org252781d">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#orgb5c6147">구 버전 패키지 사용하기</a></li>
-<li><a href="#org092d80a">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#org7c45659">Cask</a></li>
-<li><a href="#org5a8e0be">외부 링크</a></li>
+<li><a href="#org9dad7de">구 버전 패키지 사용하기</a></li>
+<li><a href="#org68ac5c8">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#orgd27d2fc">Cask</a></li>
+<li><a href="#org0044ea5">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -86,31 +98,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org90793f9" class="outline-2">
-<h2 id="org90793f9">기본 사용법</h2>
-<div class="outline-text-2" id="text-org90793f9">
+<div id="outline-container-org9debb23" class="outline-2">
+<h2 id="org9debb23">기본 사용법</h2>
+<div class="outline-text-2" id="text-org9debb23">
 </div>
-<div id="outline-container-orge444b8d" class="outline-3">
-<h3 id="orge444b8d">패키지 검색</h3>
-<div class="outline-text-3" id="text-orge444b8d">
+<div id="outline-container-orga1648af" class="outline-3">
+<h3 id="orga1648af">패키지 검색</h3>
+<div class="outline-text-3" id="text-orga1648af">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org2c394fa" class="outline-3">
-<h3 id="org2c394fa">패키지 정보</h3>
-<div class="outline-text-3" id="text-org2c394fa">
+<div id="outline-container-orgf1d9442" class="outline-3">
+<h3 id="orgf1d9442">패키지 정보</h3>
+<div class="outline-text-3" id="text-orgf1d9442">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org0e19cf4" class="outline-3">
-<h3 id="org0e19cf4">패키지 설치</h3>
-<div class="outline-text-3" id="text-org0e19cf4">
+<div id="outline-container-orga6e7a47" class="outline-3">
+<h3 id="orga6e7a47">패키지 설치</h3>
+<div class="outline-text-3" id="text-orga6e7a47">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -121,9 +133,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfa7fbc3" class="outline-3">
-<h3 id="orgfa7fbc3">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orgfa7fbc3">
+<div id="outline-container-orgc1bb009" class="outline-3">
+<h3 id="orgc1bb009">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orgc1bb009">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -135,9 +147,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org99cfb04" class="outline-3">
-<h3 id="org99cfb04">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org99cfb04">
+<div id="outline-container-orgf406dfc" class="outline-3">
+<h3 id="orgf406dfc">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-orgf406dfc">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -151,9 +163,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org65e9fd6" class="outline-3">
-<h3 id="org65e9fd6">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org65e9fd6">
+<div id="outline-container-org0a15e05" class="outline-3">
+<h3 id="org0a15e05">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org0a15e05">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -167,18 +179,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org5d5ef95" class="outline-3">
-<h3 id="org5d5ef95">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org5d5ef95">
+<div id="outline-container-org1cc2529" class="outline-3">
+<h3 id="org1cc2529">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org1cc2529">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org6350b21" class="outline-3">
-<h3 id="org6350b21">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org6350b21">
+<div id="outline-container-org252781d" class="outline-3">
+<h3 id="org252781d">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org252781d">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -189,9 +201,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgb5c6147" class="outline-2">
-<h2 id="orgb5c6147">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-orgb5c6147">
+<div id="outline-container-org9dad7de" class="outline-2">
+<h2 id="org9dad7de">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org9dad7de">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -206,9 +218,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org092d80a" class="outline-2">
-<h2 id="org092d80a">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org092d80a">
+<div id="outline-container-org68ac5c8" class="outline-2">
+<h2 id="org68ac5c8">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org68ac5c8">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -311,9 +323,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-org7c45659" class="outline-2">
-<h2 id="org7c45659">Cask</h2>
-<div class="outline-text-2" id="text-org7c45659">
+<div id="outline-container-orgd27d2fc" class="outline-2">
+<h2 id="orgd27d2fc">Cask</h2>
+<div class="outline-text-2" id="text-orgd27d2fc">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -347,9 +359,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-org5a8e0be" class="outline-2">
-<h2 id="org5a8e0be">외부 링크</h2>
-<div class="outline-text-2" id="text-org5a8e0be">
+<div id="outline-container-org0044ea5" class="outline-2">
+<h2 id="org0044ea5">외부 링크</h2>
+<div class="outline-text-2" id="text-org0044ea5">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
