--- a/note/mongodb.html
+++ b/note/mongodb.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,44 +72,44 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org09b3f2b">CLI 사용법 메모</a>
+<li><a href="#orgb6272c3">CLI 사용법 메모</a>
 <ul>
-<li><a href="#org8e855a9">연결하기(Connect)</a></li>
-<li><a href="#orgca1ba13">데이터베이스 선택(Select Database)</a></li>
-<li><a href="#orgc8952c7">데이터베이스 목록 보기(List Databases)</a></li>
-<li><a href="#org8e7e34c">컬렉션 조회(List Collections)</a></li>
-<li><a href="#org1868bf0">삽입(Insert)</a></li>
-<li><a href="#orgbc9d59d">조회(Find or Query)</a></li>
-<li><a href="#orgc3db4a0">수정(Update)</a></li>
-<li><a href="#orgde48f24">삭제(Remove)</a></li>
+<li><a href="#org317c1d5">연결하기(Connect)</a></li>
+<li><a href="#org676b3fc">데이터베이스 선택(Select Database)</a></li>
+<li><a href="#orgf950966">데이터베이스 목록 보기(List Databases)</a></li>
+<li><a href="#org2f424fd">컬렉션 조회(List Collections)</a></li>
+<li><a href="#orgbf2921f">삽입(Insert)</a></li>
+<li><a href="#org999fcc4">조회(Find or Query)</a></li>
+<li><a href="#org0a3f668">수정(Update)</a></li>
+<li><a href="#orgc639aeb">삭제(Remove)</a></li>
 </ul>
 </li>
-<li><a href="#orgbfb8e08">조회법 메모</a>
+<li><a href="#orge476517">조회법 메모</a>
 <ul>
-<li><a href="#org77dd6c6">정렬, 위치, 갯수 제한</a></li>
-<li><a href="#org5782848">수치 비교</a></li>
-<li><a href="#orgd6a126e">특정 필드 표시하지 않기</a></li>
-<li><a href="#org0687e54">특정 필드가 있는 도큐먼트 검색하기</a></li>
-<li><a href="#orge50918e">Not Null???</a></li>
+<li><a href="#orgf47acb4">정렬, 위치, 갯수 제한</a></li>
+<li><a href="#org08001aa">수치 비교</a></li>
+<li><a href="#orgeb4ef21">특정 필드 표시하지 않기</a></li>
+<li><a href="#orgfe9c86e">특정 필드가 있는 도큐먼트 검색하기</a></li>
+<li><a href="#org47105f4">Not Null???</a></li>
 </ul>
 </li>
-<li><a href="#orge44aff3">어그리게이트(Aggregate)</a>
+<li><a href="#orgb750f7a">어그리게이트(Aggregate)</a>
 <ul>
-<li><a href="#org4e5332a">기초</a></li>
-<li><a href="#org48926ed">예제</a></li>
-<li><a href="#orga0517e7">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
+<li><a href="#orgfda4917">기초</a></li>
+<li><a href="#orga1f9855">예제</a></li>
+<li><a href="#orgd9bc846">몇 가지 유용한 파이프라인 오퍼레이터</a></li>
 </ul>
 </li>
-<li><a href="#org514f910">백업 및 복원(Dump and Restore)</a>
+<li><a href="#org71ce5e2">백업 및 복원(Dump and Restore)</a>
 <ul>
-<li><a href="#orgce8aa5a">백업(Dump)</a></li>
-<li><a href="#orga519b4a">복원(Restore)</a></li>
+<li><a href="#org2f59414">백업(Dump)</a></li>
+<li><a href="#org7df38dc">복원(Restore)</a></li>
 </ul>
 </li>
-<li><a href="#orgb1d27c6">기타</a>
+<li><a href="#org018d0f9">기타</a>
 <ul>
-<li><a href="#org27be50c">컬렉션 몽땅 비우기(지우기)</a></li>
-<li><a href="#orge16ecb7">Replica Set 에서 Primary 바꾸기</a></li>
+<li><a href="#orgd290001">컬렉션 몽땅 비우기(지우기)</a></li>
+<li><a href="#org5930d2b">Replica Set 에서 Primary 바꾸기</a></li>
 </ul>
 </li>
 </ul>
@@ -110,13 +122,13 @@ MongoDB 는 이름처럼 Database 시스템이다.
 이로 인해 NoSQL DB 의 대명사이기도 하다.
 </p>
 
-<div id="outline-container-org09b3f2b" class="outline-2">
-<h2 id="org09b3f2b"><a href="cli.html">CLI</a> 사용법 메모</h2>
-<div class="outline-text-2" id="text-org09b3f2b">
+<div id="outline-container-orgb6272c3" class="outline-2">
+<h2 id="orgb6272c3"><a href="cli.html">CLI</a> 사용법 메모</h2>
+<div class="outline-text-2" id="text-orgb6272c3">
 </div>
-<div id="outline-container-org8e855a9" class="outline-3">
-<h3 id="org8e855a9">연결하기(Connect)</h3>
-<div class="outline-text-3" id="text-org8e855a9">
+<div id="outline-container-org317c1d5" class="outline-3">
+<h3 id="org317c1d5">연결하기(Connect)</h3>
+<div class="outline-text-3" id="text-org317c1d5">
 <div class="org-src-container">
 <pre class="src src-bash">mongo --host foo.bar --port <span style="color: #da8548; font-weight: bold;">27017</span>
 </pre>
@@ -137,18 +149,18 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgca1ba13" class="outline-3">
-<h3 id="orgca1ba13">데이터베이스 선택(Select Database)</h3>
-<div class="outline-text-3" id="text-orgca1ba13">
+<div id="outline-container-org676b3fc" class="outline-3">
+<h3 id="org676b3fc">데이터베이스 선택(Select Database)</h3>
+<div class="outline-text-3" id="text-org676b3fc">
 <div class="org-src-container">
 <pre class="src src-javascript">use dbname
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgc8952c7" class="outline-3">
-<h3 id="orgc8952c7">데이터베이스 목록 보기(List Databases)</h3>
-<div class="outline-text-3" id="text-orgc8952c7">
+<div id="outline-container-orgf950966" class="outline-3">
+<h3 id="orgf950966">데이터베이스 목록 보기(List Databases)</h3>
+<div class="outline-text-3" id="text-orgf950966">
 <div class="org-src-container">
 <pre class="src src-javascript">db.adminCommand({listDatabases: <span style="color: #da8548; font-weight: bold;">1</span>})
 </pre>
@@ -159,27 +171,27 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org8e7e34c" class="outline-3">
-<h3 id="org8e7e34c">컬렉션 조회(List Collections)</h3>
-<div class="outline-text-3" id="text-org8e7e34c">
+<div id="outline-container-org2f424fd" class="outline-3">
+<h3 id="org2f424fd">컬렉션 조회(List Collections)</h3>
+<div class="outline-text-3" id="text-org2f424fd">
 <div class="org-src-container">
 <pre class="src src-javascript">show collections
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org1868bf0" class="outline-3">
-<h3 id="org1868bf0">삽입(Insert)</h3>
-<div class="outline-text-3" id="text-org1868bf0">
+<div id="outline-container-orgbf2921f" class="outline-3">
+<h3 id="orgbf2921f">삽입(Insert)</h3>
+<div class="outline-text-3" id="text-orgbf2921f">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.insert({key: value, ...})
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgbc9d59d" class="outline-3">
-<h3 id="orgbc9d59d">조회(Find or Query)</h3>
-<div class="outline-text-3" id="text-orgbc9d59d">
+<div id="outline-container-org999fcc4" class="outline-3">
+<h3 id="org999fcc4">조회(Find or Query)</h3>
+<div class="outline-text-3" id="text-org999fcc4">
 <div class="org-src-container">
 <pre class="src src-javascript">db.colllection.find({key: value, ...})
 </pre>
@@ -189,9 +201,9 @@ dbname 은 생략할 수 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc3db4a0" class="outline-3">
-<h3 id="orgc3db4a0">수정(Update)</h3>
-<div class="outline-text-3" id="text-orgc3db4a0">
+<div id="outline-container-org0a3f668" class="outline-3">
+<h3 id="org0a3f668">수정(Update)</h3>
+<div class="outline-text-3" id="text-org0a3f668">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.update({key: value, ...}, {$set: {key: value, ...}})
 </pre>
@@ -209,9 +221,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgde48f24" class="outline-3">
-<h3 id="orgde48f24">삭제(Remove)</h3>
-<div class="outline-text-3" id="text-orgde48f24">
+<div id="outline-container-orgc639aeb" class="outline-3">
+<h3 id="orgc639aeb">삭제(Remove)</h3>
+<div class="outline-text-3" id="text-orgc639aeb">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.remove({key: value, ...})
 </pre>
@@ -222,13 +234,13 @@ find 에서 쓰는 쿼리와 동일하다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgbfb8e08" class="outline-2">
-<h2 id="orgbfb8e08">조회법 메모</h2>
-<div class="outline-text-2" id="text-orgbfb8e08">
+<div id="outline-container-orge476517" class="outline-2">
+<h2 id="orge476517">조회법 메모</h2>
+<div class="outline-text-2" id="text-orge476517">
 </div>
-<div id="outline-container-org77dd6c6" class="outline-3">
-<h3 id="org77dd6c6">정렬, 위치, 갯수 제한</h3>
-<div class="outline-text-3" id="text-org77dd6c6">
+<div id="outline-container-orgf47acb4" class="outline-3">
+<h3 id="orgf47acb4">정렬, 위치, 갯수 제한</h3>
+<div class="outline-text-3" id="text-orgf47acb4">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...})
              .sort({field: -<span style="color: #da8548; font-weight: bold;">1</span>})
@@ -241,9 +253,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </p>
 </div>
 </div>
-<div id="outline-container-org5782848" class="outline-3">
-<h3 id="org5782848">수치 비교</h3>
-<div class="outline-text-3" id="text-org5782848">
+<div id="outline-container-org08001aa" class="outline-3">
+<h3 id="org08001aa">수치 비교</h3>
+<div class="outline-text-3" id="text-org08001aa">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$gt: <span style="color: #da8548; font-weight: bold;">10</span>}})
 </pre>
@@ -256,9 +268,9 @@ find 에서 쓰는 쿼리와 동일하다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgd6a126e" class="outline-3">
-<h3 id="orgd6a126e">특정 필드 표시하지 않기</h3>
-<div class="outline-text-3" id="text-orgd6a126e">
+<div id="outline-container-orgeb4ef21" class="outline-3">
+<h3 id="orgeb4ef21">특정 필드 표시하지 않기</h3>
+<div class="outline-text-3" id="text-orgeb4ef21">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: value, ...},
                    {keyToHide: <span style="color: #da8548; font-weight: bold;">0</span>})
@@ -270,9 +282,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-org0687e54" class="outline-3">
-<h3 id="org0687e54">특정 필드가 있는 도큐먼트 검색하기</h3>
-<div class="outline-text-3" id="text-org0687e54">
+<div id="outline-container-orgfe9c86e" class="outline-3">
+<h3 id="orgfe9c86e">특정 필드가 있는 도큐먼트 검색하기</h3>
+<div class="outline-text-3" id="text-orgfe9c86e">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$exists: <span style="color: #a9a1e1;">true</span>}})
 </pre>
@@ -282,9 +294,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-orge50918e" class="outline-3">
-<h3 id="orge50918e">Not Null???</h3>
-<div class="outline-text-3" id="text-orge50918e">
+<div id="outline-container-org47105f4" class="outline-3">
+<h3 id="org47105f4">Not Null???</h3>
+<div class="outline-text-3" id="text-org47105f4">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.find({key: {$ne: <span style="color: #a9a1e1;">null</span>}})
 </pre>
@@ -295,9 +307,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </div>
 </div>
 </div>
-<div id="outline-container-orge44aff3" class="outline-2">
-<h2 id="orge44aff3">어그리게이트(Aggregate)</h2>
-<div class="outline-text-2" id="text-orge44aff3">
+<div id="outline-container-orgb750f7a" class="outline-2">
+<h2 id="orgb750f7a">어그리게이트(Aggregate)</h2>
+<div class="outline-text-2" id="text-orgb750f7a">
 <p>
 어그리게이트는 도큐먼트를 파이프 라인을 통해
 여러 차례에 걸쳐서 처리할 수 있도록 하는 특수한 기능이다.
@@ -305,9 +317,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 이걸 결과로 넘기는 식이 일렬로 처리되는 것과 비슷하다.
 </p>
 </div>
-<div id="outline-container-org4e5332a" class="outline-3">
-<h3 id="org4e5332a">기초</h3>
-<div class="outline-text-3" id="text-org4e5332a">
+<div id="outline-container-orgfda4917" class="outline-3">
+<h3 id="orgfda4917">기초</h3>
+<div class="outline-text-3" id="text-orgfda4917">
 <p>
 어그리게이트의 기본 문법은 아래와 같다.
 </p>
@@ -322,9 +334,9 @@ find()의 두 번째 필드는 여러 옵션을 줄 수 있는데
 </p>
 </div>
 </div>
-<div id="outline-container-org48926ed" class="outline-3">
-<h3 id="org48926ed">예제</h3>
-<div class="outline-text-3" id="text-org48926ed">
+<div id="outline-container-orga1f9855" class="outline-3">
+<h3 id="orga1f9855">예제</h3>
+<div class="outline-text-3" id="text-orga1f9855">
 <div class="org-src-container">
 <pre class="src src-text">db.user.aggregate([
     {$match:
@@ -357,9 +369,9 @@ user라는 컬렉션에서 2000년 이후로 가입한 사람들만 간추려서
 </p>
 </div>
 </div>
-<div id="outline-container-orga0517e7" class="outline-3">
-<h3 id="orga0517e7">몇 가지 유용한 파이프라인 오퍼레이터</h3>
-<div class="outline-text-3" id="text-orga0517e7">
+<div id="outline-container-orgd9bc846" class="outline-3">
+<h3 id="orgd9bc846">몇 가지 유용한 파이프라인 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orgd9bc846">
 <ul class="org-ul">
 <li><code>$match</code> 필터 혹은 쿼리(find와 비슷)</li>
 <li><code>$group</code> 특정한 필드를 기준으로 모으기(grouping)</li>
@@ -383,13 +395,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-org514f910" class="outline-2">
-<h2 id="org514f910">백업 및 복원(Dump and Restore)</h2>
-<div class="outline-text-2" id="text-org514f910">
+<div id="outline-container-org71ce5e2" class="outline-2">
+<h2 id="org71ce5e2">백업 및 복원(Dump and Restore)</h2>
+<div class="outline-text-2" id="text-org71ce5e2">
 </div>
-<div id="outline-container-orgce8aa5a" class="outline-3">
-<h3 id="orgce8aa5a">백업(Dump)</h3>
-<div class="outline-text-3" id="text-orgce8aa5a">
+<div id="outline-container-org2f59414" class="outline-3">
+<h3 id="org2f59414">백업(Dump)</h3>
+<div class="outline-text-3" id="text-org2f59414">
 <div class="org-src-container">
 <pre class="src src-bash">mongodump --host host.foo.bar <span style="color: #98be65;">\</span>
           --out /foo/bar/dump/directory <span style="color: #98be65;">\</span>
@@ -404,9 +416,9 @@ Pipeline Stages</a> 문서를 참고해보자.
 </p>
 </div>
 </div>
-<div id="outline-container-orga519b4a" class="outline-3">
-<h3 id="orga519b4a">복원(Restore)</h3>
-<div class="outline-text-3" id="text-orga519b4a">
+<div id="outline-container-org7df38dc" class="outline-3">
+<h3 id="org7df38dc">복원(Restore)</h3>
+<div class="outline-text-3" id="text-org7df38dc">
 <div class="org-src-container">
 <pre class="src src-bash">mongorestore --host host.foo.bar /foo/bar/dump/directory
 </pre>
@@ -418,13 +430,13 @@ Pipeline Stages</a> 문서를 참고해보자.
 </div>
 </div>
 </div>
-<div id="outline-container-orgb1d27c6" class="outline-2">
-<h2 id="orgb1d27c6">기타</h2>
-<div class="outline-text-2" id="text-orgb1d27c6">
+<div id="outline-container-org018d0f9" class="outline-2">
+<h2 id="org018d0f9">기타</h2>
+<div class="outline-text-2" id="text-org018d0f9">
 </div>
-<div id="outline-container-org27be50c" class="outline-3">
-<h3 id="org27be50c">컬렉션 몽땅 비우기(지우기)</h3>
-<div class="outline-text-3" id="text-org27be50c">
+<div id="outline-container-orgd290001" class="outline-3">
+<h3 id="orgd290001">컬렉션 몽땅 비우기(지우기)</h3>
+<div class="outline-text-3" id="text-orgd290001">
 <div class="org-src-container">
 <pre class="src src-javascript">db.collection.remove({})
 </pre>
@@ -434,9 +446,9 @@ Pipeline Stages</a> 문서를 참고해보자.
 </p>
 </div>
 </div>
-<div id="outline-container-orge16ecb7" class="outline-3">
-<h3 id="orge16ecb7">Replica Set 에서 Primary 바꾸기</h3>
-<div class="outline-text-3" id="text-orge16ecb7">
+<div id="outline-container-org5930d2b" class="outline-3">
+<h3 id="org5930d2b">Replica Set 에서 Primary 바꾸기</h3>
+<div class="outline-text-3" id="text-org5930d2b">
 <p>
 삽질로 알아낸 정보라 이 방법 외에 다른 방법이 있을 수도 있음을 먼저 알린다.
 </p>
