--- a/note/org-publish.html
+++ b/note/org-publish.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,7 +72,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga1bbcaa">외부 링크</a></li>
+<li><a href="#org29736cf">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +89,9 @@ org-publish는 <a href="emacs.html">Emacs</a>에서
 상세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/63">🌏Org Publish로 익스포트 자동화하기</a> 글을 참고하자.
 </p>
 
-<div id="outline-container-orga1bbcaa" class="outline-2">
-<h2 id="orga1bbcaa">외부 링크</h2>
-<div class="outline-text-2" id="text-orga1bbcaa">
+<div id="outline-container-org29736cf" class="outline-2">
+<h2 id="org29736cf">외부 링크</h2>
+<div class="outline-text-2" id="text-org29736cf">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/manual/Publishing.html">🌏org-publish 공식 매뉴얼</a></li>
 </ul>
