--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -60,7 +72,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6b936db">외부 링크</a></li>
+<li><a href="#orgcb6aa0d">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -78,9 +90,9 @@ gtag('config', 'UA-44534026-1');
 글을 참고하자.
 </p>
 
-<div id="outline-container-org6b936db" class="outline-2">
-<h2 id="org6b936db">외부 링크</h2>
-<div class="outline-text-2" id="text-org6b936db">
+<div id="outline-container-orgcb6aa0d" class="outline-2">
+<h2 id="orgcb6aa0d">외부 링크</h2>
+<div class="outline-text-2" id="text-orgcb6aa0d">
 <ul class="org-ul">
 <li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏Org as a spreadsheet system: a short introduction</a></li>
 </ul>
