--- a/note/svg.html
+++ b/note/svg.html
@@ -48,6 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
+<div class="top-ad-container">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle top-ad"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <hr/>
 <div class="content-container">
 <div class="left-empty">
@@ -69,9 +81,9 @@ SVG는 XML로 표현된 오픈 표준의 포맷이라는 큰 장점이 있어서
 벡터이기 때문에 면과 면을 채우는 색, 그리고 테두리 색 등으로  이미지를 구성한다.
 </p>
 
-<div id="outline-container-org4e5ab4f" class="outline-2">
-<h2 id="org4e5ab4f"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
-<div class="outline-text-2" id="text-org4e5ab4f">
+<div id="outline-container-org5798ea5" class="outline-2">
+<h2 id="org5798ea5"><a href="macos.html">macOS</a>에서 SVG 파일을 PNG로 바꾸기</h2>
+<div class="outline-text-2" id="text-org5798ea5">
 <p>
 <code>rsvg-convert</code> 라는 <a href="cli.html">CLI</a> 유틸리티로 변환이 가능하다.
 </p>
